--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,34 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    // Общие настройки, подходящие для React Native/Expo:
+    "target": "ES2020", // Более современный таргет, чем ES2017. Babel/Metro все равно транспилируют.
+
+    // Удалены "dom" и "dom.iterable", так как они не нужны в React Native.
+    "lib": ["esnext"],
+
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "noEmit": true, // Важно: транспиляцию делает Metro, а не TypeScript.
+    "esModuleInterop": true,
+
+    // "bundler" - подходит для современных версий TypeScript и Metro.
+    "moduleResolution": "bundler",
+
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "react-native", // **Ключевое изменение:** использовать JSX-фабрику React Native.
+
+    "incremental": true,
+    "module": "esnext", // Лучше подходит для tree-shaking и современных бандлеров.
+
+    // Удалены Next.js плагины, так как это React Native.
+    "plugins": [],
+
+    // Псевдонимы путей сохранены, они полезны.
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
